--- a/src/Components/ButtonList.css
+++ b/src/Components/ButtonList.css
@@ -1,12 +1,12 @@
 /* TopButtons.css */
 
-.top-buttons {
+.top-btns {
     display: flex;
     align-items: center;
     margin-top: 20px;
   }
   
-  .top-button {
+  .top-btn {
     padding: 8px 20px;
     margin-right: 10px;
     background-color: #f0f0f0;
@@ -32,15 +32,4 @@
     background-color: #c4302b;
   }
   
-  /* Media Queries for responsiveness */
-  @media screen and (max-width: 768px) {
-    .top-buttons {
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-  
-    .top-button {
-      margin: 4px;
-    }
-  }
-  
+ 
