--- a/src/Components/Head.css
+++ b/src/Components/Head.css
@@ -6,7 +6,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  position:fixed;
+  top: 0;
+  z-index: 10;
+  width: 100%;
+  /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); */
 }
 
 .logo {
@@ -46,6 +50,7 @@
 .top-buttons {
   display: flex;
   align-items: center;
+  
 }
 
 .top-button {
