--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -2,8 +2,11 @@
 
 .sidebar {
     width: 160px;
+   z-index: 10;
     background-color: #fff;
     border-right: 1px solid #dadce0;
+    margin-top: 4.5rem;
+   
   }
   
   .sidebar-menu {
